tests/baselines/reference/invalidVoidAssignments.errors.txt
==== tests/cases/compiler/invalidVoidAssignments.ts (13 errors) ====
    var x: void;
    
    var a: boolean = x;
        ~~~~~~~~~~~~~~
!!! invalidVoidAssignments.ts(3,5): error TS2011: Type 'void' is not assignable to type 'boolean'.
    var b: string = x;
        ~~~~~~~~~~~~~
!!! invalidVoidAssignments.ts(4,5): error TS2011: Type 'void' is not assignable to type 'string'.
    var c: number = x;
        ~~~~~~~~~~~~~
!!! invalidVoidAssignments.ts(5,5): error TS2011: Type 'void' is not assignable to type 'number'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~~~~~~~~
!!! invalidVoidAssignments.ts(9,5): error TS2011: Type 'void' is not assignable to type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~~~~~~~~
!!! invalidVoidAssignments.ts(12,5): error TS2011: Type 'void' is not assignable to type 'I'.
    
    var g: { baz: string } = 1;
        ~~~~~~~~~~~~~~~~~~~~~~
!!! invalidVoidAssignments.ts(14,5): error TS2012: Type 'number' is not assignable to type '{ baz: string; }':
!!! 	Type 'Number' is missing property 'baz' from type '{ baz: string; }'.
    var g2: { 0: number } = 1;
        ~~~~~~~~~~~~~~~~~~~~~
!!! invalidVoidAssignments.ts(15,5): error TS2012: Type 'number' is not assignable to type '{ 0: number; }':
!!! 	Type 'Number' is missing property '0' from type '{ 0: number; }'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! invalidVoidAssignments.ts(18,1): error TS2130: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! invalidVoidAssignments.ts(21,5): error TS2011: Type 'void' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! invalidVoidAssignments.ts(23,1): error TS2130: Invalid left-hand side of assignment expression.
    
    enum E { A }
    x = E;
    ~
!!! invalidVoidAssignments.ts(26,1): error TS2011: Type 'typeof E' is not assignable to type 'void'.
    x = E.A;
    ~
!!! invalidVoidAssignments.ts(27,1): error TS2011: Type 'E' is not assignable to type 'void'.
    
    x = { f() { } }
    ~
!!! invalidVoidAssignments.ts(29,1): error TS2011: Type '{ f(): void; }' is not assignable to type 'void'.